trunk/Source/include/GLS_CUDA_API.hpp


//-- type declarations -------------------------------------------------------
typedef void * TCUdeviceptr;


typedef int TCUdevice;


struct DECLSPEC_DRECORD TCUcontext
{
};



typedef TCUcontext *PCUcontext;


struct DECLSPEC_DRECORD TCUfunction
{
};



typedef TCUfunction *PCUfunction;


struct DECLSPEC_DRECORD TCUarray
{
};



typedef TCUarray *PCUarray;


struct DECLSPEC_DRECORD TCUtexref
{
};



typedef TCUtexref *PCUtexref;


struct DECLSPEC_DRECORD TCUevent
{
};



typedef TCUevent *PCUevent;


struct DECLSPEC_DRECORD TCUstream
{
};



typedef TCUstream *PCUstream;


struct DECLSPEC_DRECORD TCUgraphicsResource
{
};



typedef TCUgraphicsResource *PCUgraphicsResource;


typedef PCUgraphicsResource *PPCUgraphicsResource;


typedef unsigned TCUresult;



struct TCUDA_ARRAY_DESCRIPTOR;


struct DECLSPEC_DRECORD TCUDA_ARRAY_DESCRIPTOR
{
public:
	unsigned Width;
	unsigned Height;
	TCUarray_format Format;
	unsigned NumChannels;
};


typedef void * HGPUNV;


typedef TCUresult __stdcall (*TcuTexRefSetAddress)(unsigned &ByteOffset, PCUtexref hTexRef, void * dptr, unsigned bytes);


typedef TCUresult __stdcall (*TcuTexRefSetAddress2D)(PCUtexref hTexRef, TCUDA_ARRAY_DESCRIPTOR &desc, void * dptr, unsigned Pitch);


typedef TCUresult __stdcall (*TcuTexRefSetFormat)(PCUtexref hTexRef, TCUarray_format fmt, int NumPackedComponents);


typedef TCUresult __stdcall (*TcuTexRefSetAddressMode)(PCUtexref hTexRef, int dim, TCUaddress_mode am);


typedef TCUresult __stdcall (*TcuTexRefSetFilterMode)(PCUtexref hTexRef, TCUfilter_mode fm);


typedef TCUresult __stdcall (*TcuTexRefSetFlags)(PCUtexref hTexRef, unsigned Flags);


typedef TCUresult __stdcall (*TcuTexRefGetAddress)(void * &pdptr, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuTexRefGetArray)(PCUarray &phArray, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuTexRefGetAddressMode)(TCUaddress_mode &pam, PCUtexref hTexRef, int dim);


typedef TCUresult __stdcall (*TcuTexRefGetFilterMode)(TCUfilter_mode &pfm, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuTexRefGetFormat)(TCUarray_format &pFormat, int &pNumChannels, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuTexRefGetFlags)(unsigned &pFlags, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuParamSetSize)(PCUfunction hfunc, unsigned numbytes);


typedef TCUresult __stdcall (*TcuParamSeti)(PCUfunction hfunc, int offset, unsigned value);


typedef TCUresult __stdcall (*TcuParamSetf)(PCUfunction hfunc, int offset, float value);


typedef TCUresult __stdcall (*TcuParamSetv)(PCUfunction hfunc, int offset, void *ptr, unsigned numbytes);


typedef TCUresult __stdcall (*TcuParamSetTexRef)(PCUfunction hfunc, int texunit, PCUtexref hTexRef);


typedef TCUresult __stdcall (*TcuLaunch)(PCUfunction f);


typedef TCUresult __stdcall (*TcuLaunchGrid)(PCUfunction f, int grid_width, int grid_height);


typedef TCUresult __stdcall (*TcuLaunchGridAsync)(PCUfunction f, int grid_width, int grid_height, PCUstream hStream);


typedef TCUresult __stdcall (*TcuEventCreate)(PCUevent &phEvent, unsigned Flags);


typedef TCUresult __stdcall (*TcuEventRecord)(PCUevent hEvent, PCUstream hStream);


typedef TCUresult __stdcall (*TcuEventQuery)(PCUevent hEvent);


typedef TCUresult __stdcall (*TcuEventSynchronize)(PCUevent hEvent);


typedef TCUresult __stdcall (*TcuEventDestroy)(PCUevent hEvent);


typedef TCUresult __stdcall (*TcuEventElapsedTime)(float &pMilliseconds, PCUevent hStart, PCUevent hEnd);


typedef TCUresult __stdcall (*TcuStreamCreate)(PCUstream &phStream, unsigned Flags);


typedef TCUresult __stdcall (*TcuStreamQuery)(PCUstream hStream);


typedef TCUresult __stdcall (*TcuStreamSynchronize)(PCUstream hStream);


typedef TCUresult __stdcall (*TcuStreamDestroy)(PCUstream hStream);


typedef TCUresult __stdcall (*TcuGLCtxCreate)(PCUcontext &pctx, unsigned Flags, int device);


typedef TCUresult __stdcall (*TcuGraphicsGLRegisterBuffer)(PCUgraphicsResource &pCudaResource, unsigned buffer, TCUgraphicsMapResourceFlags Flags);


typedef TCUresult __stdcall (*TcuGraphicsGLRegisterImage)(PCUgraphicsResource &pCudaResource, unsigned image, unsigned target, TCUgraphicsMapResourceFlags Flags);


typedef TCUresult __stdcall (*TcuWGLGetDevice)(int &pDevice, void * hGpu);


typedef TCUresult __stdcall (*TcuGraphicsUnregisterResource)(PCUgraphicsResource resource);


typedef TCUresult __stdcall (*TcuGraphicsSubResourceGetMappedArray)(PCUarray &pArray, PCUgraphicsResource resource, unsigned arrayIndex, unsigned mipLevel);


typedef TCUresult __stdcall (*TcuGraphicsResourceGetMappedPointer)(void * &pDevPtr, /* out */ unsigned &psize, PCUgraphicsResource resource);


typedef TCUresult __stdcall (*TcuGraphicsResourceSetMapFlags)(PCUgraphicsResource resource, unsigned Flags);


typedef TCUresult __stdcall (*TcuGraphicsMapResources)(unsigned count, PPCUgraphicsResource resources, PCUstream hStream);


typedef TCUresult __stdcall (*TcuGraphicsUnmapResources)(unsigned count, PPCUgraphicsResource resources, PCUstream hStream);


typedef void __stdcall (*TcuGLInit)(void);


typedef TCUresult __stdcall (*TcuGLRegisterBufferObject)(unsigned buffer);


typedef TCUresult __stdcall (*TcuGLMapBufferObject)(void * &dptr, unsigned &size, unsigned buffer);


typedef TCUresult __stdcall (*TcuGLUnmapBufferObject)(unsigned buffer);


typedef TCUresult __stdcall (*TcuGLUnregisterBufferObject)(unsigned buffer);


typedef TCUresult __stdcall (*TcuGLSetBufferObjectMapFlags)(unsigned buffer, unsigned Flags);


typedef TCUresult __stdcall (*TcuGLMapBufferObjectAsync)(void * &dptr, unsigned &size, unsigned buffer, PCUstream hStream);


typedef TCUresult __stdcall (*TcuGLUnmapBufferObjectAsync)(unsigned buffer, PCUstream hStream);


//-- var, const, procedure ---------------------------------------------------
#define CUDAAPIDLL L"nvcuda.dll"

extern PACKAGE TcuTexRefSetAddress cuTexRefSetAddress;

extern PACKAGE TcuTexRefSetAddress2D cuTexRefSetAddress2D;

extern PACKAGE TcuTexRefSetFormat cuTexRefSetFormat;

extern PACKAGE TcuTexRefSetAddressMode cuTexRefSetAddressMode;

extern PACKAGE TcuTexRefSetFilterMode cuTexRefSetFilterMode;

extern PACKAGE TcuTexRefSetFlags cuTexRefSetFlags;

extern PACKAGE TcuTexRefGetAddress cuTexRefGetAddress;

extern PACKAGE TcuTexRefGetArray cuTexRefGetArray;

extern PACKAGE TcuTexRefGetAddressMode cuTexRefGetAddressMode;

extern PACKAGE TcuTexRefGetFilterMode cuTexRefGetFilterMode;

extern PACKAGE TcuTexRefGetFormat cuTexRefGetFormat;

extern PACKAGE TcuTexRefGetFlags cuTexRefGetFlags;

extern PACKAGE TcuParamSetSize cuParamSetSize;

extern PACKAGE TcuParamSeti cuParamSeti;

extern PACKAGE TcuParamSetf cuParamSetf;

extern PACKAGE TcuParamSetv cuParamSetv;

extern PACKAGE TcuParamSetTexRef cuParamSetTexRef;

extern PACKAGE TcuLaunch cuLaunch;

extern PACKAGE TcuLaunchGrid cuLaunchGrid;

extern PACKAGE TcuLaunchGridAsync cuLaunchGridAsync;

extern PACKAGE TcuEventCreate cuEventCreate;

extern PACKAGE TcuEventRecord cuEventRecord;

extern PACKAGE TcuEventQuery cuEventQuery;

extern PACKAGE TcuEventSynchronize cuEventSynchronize;

extern PACKAGE TcuEventDestroy cuEventDestroy;

extern PACKAGE TcuEventElapsedTime cuEventElapsedTime;

extern PACKAGE TcuStreamCreate cuStreamCreate;

extern PACKAGE TcuStreamQuery cuStreamQuery;

extern PACKAGE TcuStreamSynchronize cuStreamSynchronize;

extern PACKAGE TcuStreamDestroy cuStreamDestroy;

extern PACKAGE TcuGLInit cuGLInit;

extern PACKAGE TcuGLCtxCreate cuGLCtxCreate;

extern PACKAGE TcuGraphicsGLRegisterBuffer cuGraphicsGLRegisterBuffer;

extern PACKAGE TcuGraphicsGLRegisterImage cuGraphicsGLRegisterImage;

extern PACKAGE TcuWGLGetDevice cuWGLGetDevice;

extern PACKAGE TcuGraphicsUnregisterResource cuGraphicsUnregisterResource;

extern PACKAGE TcuGraphicsSubResourceGetMappedArray cuGraphicsSubResourceGetMappedArray;

extern PACKAGE TcuGraphicsResourceGetMappedPointer cuGraphicsResourceGetMappedPointer;

extern PACKAGE TcuGraphicsResourceSetMapFlags cuGraphicsResourceSetMapFlags;

extern PACKAGE TcuGraphicsMapResources cuGraphicsMapResources;

extern PACKAGE TcuGraphicsUnmapResources cuGraphicsUnmapResources;

extern PACKAGE TcuGLRegisterBufferObject cuGLRegisterBufferObject;

extern PACKAGE TcuGLMapBufferObject cuGLMapBufferObject;

extern PACKAGE TcuGLUnmapBufferObject cuGLUnmapBufferObject;

extern PACKAGE TcuGLUnregisterBufferObject cuGLUnregisterBufferObject;

extern PACKAGE TcuGLSetBufferObjectMapFlags cuGLSetBufferObjectMapFlags;

extern PACKAGE TcuGLMapBufferObjectAsync cuGLMapBufferObjectAsync;

extern PACKAGE TcuGLUnmapBufferObjectAsync cuGLUnmapBufferObjectAsync;

extern PACKAGE bool __fastcall InitCUDA(void);

extern PACKAGE void __fastcall CloseCUDA(void);

extern PACKAGE bool __fastcall InitCUDAFromLibrary(const System::WideString LibName);

extern PACKAGE bool __fastcall IsCUDAInitialized(void);