tags/GLScene v1.1/Source/ComputeAPIs/GLS_CUDA_API.pas


  cuTexRefSetAddress: function(var ByteOffset: Cardinal; hTexRef: PCUtexref;
    dptr: TCUdeviceptr; bytes: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetAddress2D: function(hTexRef: PCUtexref; var desc:
    TCUDA_ARRAY_DESCRIPTOR; dptr: TCUdeviceptr; Pitch: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetFormat: function(hTexRef: PCUtexref; fmt: TCUarray_format;
    NumPackedComponents: Integer): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetAddressMode: function(hTexRef: PCUtexref; dim: Integer; am:
    TCUaddress_mode): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetFilterMode: function(hTexRef: PCUtexref; fm: TCUfilter_mode):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefSetFlags: function(hTexRef: PCUtexref; Flags: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetAddress: function(var pdptr: TCUdeviceptr; hTexRef: PCUtexref):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetArray: function(var phArray: PCUarray; hTexRef: PCUtexref):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetAddressMode: function(var pam: TCUaddress_mode; hTexRef: PCUtexref;
    dim: Integer): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetFilterMode: function(var pfm: TCUfilter_mode; hTexRef: PCUtexref):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetFormat: function(var pFormat: TCUarray_format; var pNumChannels:
    Integer; hTexRef: PCUtexref): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuTexRefGetFlags: function(var pFlags: Cardinal; hTexRef: PCUtexref):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Parameter management
  ////
  ////////////////////////////////////*/

  cuParamSetSize: function(hfunc: PCUfunction; numbytes: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuParamSeti: function(hfunc: PCUfunction; offset: Integer; value: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuParamSetf: function(hfunc: PCUfunction; offset: Integer; value: Single):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuParamSetv: function(hfunc: PCUfunction; offset: Integer; var ptr; numbytes:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuParamSetTexRef: function(hfunc: PCUfunction; texunit: Integer; hTexRef:
    PCUtexref): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Launch functions
  ////
  ////////////////////////////////////*/

  cuLaunch: function(f: PCUfunction): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuLaunchGrid: function(f: PCUfunction; grid_width: Integer; grid_height:
    Integer): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuLaunchGridAsync: function(f: PCUfunction; grid_width: Integer; grid_height:
    Integer; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  ///////////////////////////////////////
  ////
  ////    Events
  ////
  ////////////////////////////////////*/
  cuEventCreate: function(var phEvent: PCUevent; Flags: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuEventRecord: function(hEvent: PCUevent; hStream: PCUstream):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuEventQuery: function(hEvent: PCUevent): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuEventSynchronize: function(hEvent: PCUevent): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuEventDestroy: function(hEvent: PCUevent): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuEventElapsedTime: function(var pMilliseconds: Single; hStart: PCUevent;
    hEnd: PCUevent): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  /////////////////////////////////////
  ////
  ////    Streams
  ////
  ///////////////////////////////////*/
  cuStreamCreate: function(var phStream: PCUstream; Flags: Cardinal):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuStreamQuery: function(hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuStreamSynchronize: function(hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuStreamDestroy: function(hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLCtxCreate: function(var pCtx: PCUcontext; Flags: Cardinal; device:
    TCUdevice): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  /////////////////////////////////////
  ////
  ////    Graphics interop
  ////
  ///////////////////////////////////*/
  ///
  cuGraphicsGLRegisterBuffer: function(var pCudaResource: PCUgraphicsResource;
    buffer: Cardinal; Flags: TCUgraphicsMapResourceFlags): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsGLRegisterImage: function(var pCudaResource: PCUgraphicsResource;
    image, target: Cardinal; Flags: TCUgraphicsMapResourceFlags): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

{$IFDEF MSWINDOWS}
  cuWGLGetDevice: function(var pDevice: TCUdevice; hGpu: HGPUNV): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
{$ENDIF}

  cuGraphicsUnregisterResource: function(resource: PCUgraphicsResource):
    TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsSubResourceGetMappedArray: function(var pArray: PCUarray; resource:
    PCUgraphicsResource; arrayIndex: Cardinal; mipLevel: Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsResourceGetMappedPointer: function(var pDevPtr: TCUdeviceptr; var
    pSize: Cardinal; resource: PCUgraphicsResource): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsResourceSetMapFlags: function(resource: PCUgraphicsResource; flags:
    Cardinal): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsMapResources: function(count: Cardinal; resources:
    PPCUgraphicsResource; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  cuGraphicsUnmapResources: function(count: Cardinal; resources:
    PPCUgraphicsResource; hStream: PCUstream): TCUresult
{$IFDEF CUDA_STDCALL} stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}
  //
  // CUDA 2.x compatibility API. These functions are deprecated,
  // please use the ones above.
  //

  cuGLInit: procedure;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLRegisterBufferObject: function(buffer: Cardinal): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLMapBufferObject: function(var dptr: TCUdeviceptr; var size: Cardinal;
    buffer: Cardinal): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLUnmapBufferObject: function(buffer: Cardinal): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLUnregisterBufferObject: function(buffer: Cardinal): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLSetBufferObjectMapFlags: function(buffer: Cardinal; Flags: Cardinal):
    TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLMapBufferObjectAsync: function(var dptr: TCUdeviceptr; var size: Cardinal;
    buffer: Cardinal; hStream: PCUstream): TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

  cuGLUnmapBufferObjectAsync: function(buffer: Cardinal; hStream: PCUstream):
    TCUresult;
{$IFDEF CUDA_STDCALL}stdcall;
{$ENDIF}
{$IFDEF CUDA_CDECL}cdecl;
{$ENDIF}

function InitCUDA: Boolean;
procedure CloseCUDA;
function InitCUDAFromLibrary(const LibName: WideString): Boolean;
function IsCUDAInitialized: Boolean;
function GetCUDAAPIerrorString(err: TCUresult): string;

implementation

const
  INVALID_MODULEHANDLE = 0;

  // ************** Windows specific ********************
{$IFDEF MSWINDOWS}
var
  CUDAHandle: HINST;
{$ENDIF}
  // ************** UNIX specific ********************
{$IFDEF UNIX}
var
  CUDAHandle: TLibHandle;
{$ENDIF}

function CUDAGetProcAddress(ProcName: PAnsiChar): Pointer;
begin
  result := GetProcAddress(Cardinal(CUDAHandle), ProcName);
end;

function InitCUDA: Boolean;
begin
  if CUDAHandle = INVALID_MODULEHANDLE then
    Result := InitCUDAFromLibrary(CUDAAPIDLL)
  else
    Result := True;
end;

procedure CloseCUDA;
begin
  if CUDAHandle <> INVALID_MODULEHANDLE then
  begin
    FreeLibrary(Cardinal(CUDAHandle));
    CUDAHandle := INVALID_MODULEHANDLE;
  end;
end;

function InitCUDAFromLibrary(const LibName: WideString): Boolean;
begin
  Result := False;
  CloseCUDA;
  CUDAHandle := LoadLibraryW(PWideChar(LibName));
  if CUDAHandle = INVALID_MODULEHANDLE then
    Exit;
